CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 OLD)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(libtomcrypt)

SET(LIBTOMCRYPT_SRC
hashes/sha1.c
hashes/helper/hash_memory.c
math/ltm_desc.c
math/multi.c
math/rand_prime.c
misc/zeromem.c
misc/crypt/crypt.c
misc/crypt/crypt_argchk.c
misc/crypt/crypt_cipher_descriptor.c
misc/crypt/crypt_cipher_is_valid.c
misc/crypt/crypt_find_cipher.c
misc/crypt/crypt_find_cipher_any.c
misc/crypt/crypt_find_cipher_id.c
misc/crypt/crypt_find_hash.c
misc/crypt/crypt_find_hash_any.c
misc/crypt/crypt_find_hash_id.c
misc/crypt/crypt_find_hash_oid.c
misc/crypt/crypt_find_prng.c
misc/crypt/crypt_fsa.c
misc/crypt/crypt_hash_descriptor.c
misc/crypt/crypt_hash_is_valid.c
misc/crypt/crypt_ltc_mp_descriptor.c
misc/crypt/crypt_prng_descriptor.c
misc/crypt/crypt_prng_is_valid.c
misc/crypt/crypt_register_cipher.c
misc/crypt/crypt_register_hash.c
misc/crypt/crypt_register_prng.c
misc/crypt/crypt_unregister_cipher.c
misc/crypt/crypt_unregister_hash.c
misc/crypt/crypt_unregister_prng.c
pk/asn1/der/bit/der_decode_bit_string.c
pk/asn1/der/bit/der_encode_bit_string.c
pk/asn1/der/bit/der_length_bit_string.c
pk/asn1/der/boolean/der_decode_boolean.c
pk/asn1/der/boolean/der_encode_boolean.c
pk/asn1/der/boolean/der_length_boolean.c
pk/asn1/der/choice/der_decode_choice.c
pk/asn1/der/ia5/der_decode_ia5_string.c
pk/asn1/der/ia5/der_encode_ia5_string.c
pk/asn1/der/ia5/der_length_ia5_string.c
pk/asn1/der/integer/der_decode_integer.c
pk/asn1/der/integer/der_encode_integer.c
pk/asn1/der/integer/der_length_integer.c
pk/asn1/der/object_identifier/der_decode_object_identifier.c
pk/asn1/der/object_identifier/der_encode_object_identifier.c
pk/asn1/der/object_identifier/der_length_object_identifier.c
pk/asn1/der/octet/der_decode_octet_string.c
pk/asn1/der/octet/der_encode_octet_string.c
pk/asn1/der/octet/der_length_octet_string.c
pk/asn1/der/printable_string/der_decode_printable_string.c
pk/asn1/der/printable_string/der_encode_printable_string.c
pk/asn1/der/printable_string/der_length_printable_string.c
pk/asn1/der/sequence/der_decode_sequence_ex.c
pk/asn1/der/sequence/der_decode_sequence_flexi.c
pk/asn1/der/sequence/der_decode_sequence_multi.c
pk/asn1/der/sequence/der_encode_sequence_ex.c
pk/asn1/der/sequence/der_encode_sequence_multi.c
pk/asn1/der/sequence/der_length_sequence.c
pk/asn1/der/sequence/der_sequence_free.c
pk/asn1/der/set/der_encode_set.c
pk/asn1/der/set/der_encode_setof.c
pk/asn1/der/short_integer/der_decode_short_integer.c
pk/asn1/der/short_integer/der_encode_short_integer.c
pk/asn1/der/short_integer/der_length_short_integer.c
pk/asn1/der/utctime/der_decode_utctime.c
pk/asn1/der/utctime/der_encode_utctime.c
pk/asn1/der/utctime/der_length_utctime.c
pk/asn1/der/utf8/der_decode_utf8_string.c
pk/asn1/der/utf8/der_encode_utf8_string.c
pk/asn1/der/utf8/der_length_utf8_string.c
pk/pkcs1/pkcs_1_i2osp.c
pk/pkcs1/pkcs_1_mgf1.c
pk/pkcs1/pkcs_1_oaep_decode.c
pk/pkcs1/pkcs_1_oaep_encode.c
pk/pkcs1/pkcs_1_os2ip.c
pk/pkcs1/pkcs_1_pss_decode.c
pk/pkcs1/pkcs_1_pss_encode.c
pk/pkcs1/pkcs_1_v1_5_decode.c
pk/pkcs1/pkcs_1_v1_5_encode.c
pk/rsa/rsa_decrypt_key.c
pk/rsa/rsa_encrypt_key.c
pk/rsa/rsa_export.c
pk/rsa/rsa_exptmod.c
pk/rsa/rsa_free.c
pk/rsa/rsa_import.c
pk/rsa/rsa_make_key.c
pk/rsa/rsa_sign_hash.c
pk/rsa/rsa_verify_hash.c
)

ADD_DEFINITIONS(-DLTC_NO_ASM)
ADD_DEFINITIONS(-DLTC_SOURCE)
INCLUDE_DIRECTORIES(headers)
ADD_LIBRARY(tomcrypt ${LIBTOMCRYPT_SRC})
TARGET_LINK_LIBRARIES(tomcrypt tommath)
